--- a/public/app/js/login/login_template.html
+++ b/public/app/js/login/login_template.html
@@ -1,5 +1,5 @@
 <div class = 'well container'>
-  <form class = "loginForm container" ng-submit= "login(loginUser)">
+  <!-- <form class = "loginForm container" ng-submit= "login(loginUser)">
     <span ng-show = "signup">
       <input type = "password" class = "form-control" placeholder = "display name" ng-required = "signup" ng-model = 'loginUser.display_name'>
     </span>
@@ -11,7 +11,7 @@
     <div class = "left-margin" ng-show = "signup" class = "">
       <button class = "btn-primary btn-lg" type = "submit">Sign Up</button> <span class = "login-message" ng-click = "signup=false">Login</span>
     </div>
-  </form>
+  </form> <!-- -->
   <a href="/auth/facebook">
 
     <img class = "left-margin" src = "images/facebook-login.png" width="175px">
