Admin Page, Question View

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     <script src = "app/js/newQuestion/newQuestionController.js"></script>
     <script src = "app/js/login/loginController.js"></script>
     <script src = "app/js/angucomplete.js"></script>
+    <script src = "app/js/admin/adminController.js"></script>
+    <script src = "app/js/admin/questions/adminQuestionsController.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
 </html>
