--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <script src = "app/js/login/loginController.js"></script>
     <script src = "app/js/angucomplete.js"></script>
     <script src = "app/js/admin/adminController.js"></script>
+    <script src = "app/js/admin/users/adminUsersController.js"></script>
     <script src = "app/js/admin/questions/adminQuestionsController.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
