--- a/public/app/js/admin/admin_template.html
+++ b/public/app/js/admin/admin_template.html
@@ -3,7 +3,7 @@ Admin Pages
   <li ng-click = "goto('admin/questions')">
     Edit Questions
   </li>
-  <li>
+  <li ng-click = "goto('admin/users')">
     Set Admins
   </li>
   <li>
