--- a/public/app/js/login/login_template.html
+++ b/public/app/js/login/login_template.html
@@ -14,6 +14,6 @@
   </form> <!-- -->
   <a href="/auth/facebook">
 
-    <img class = "left-margin" src = "images/facebook-login.png" width="175px">
+    <img class = "center-block" src = "images/facebook-login.png" width="175px">
   </a>
 </div>
