--- a/public/app/js/admin/admin_template.html
+++ b/public/app/js/admin/admin_template.html
@@ -6,7 +6,7 @@ Admin Pages
   <li ng-click = "goto('admin/users')">
     Set Admins
   </li>
-  <li>
+  <li ng-click = "goto('admin/complaints')">
     View Flagged Questions
   </li>
 </ul>
