--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script src = "app/js/services/authService.js"></script>
     <script src = "app/js/services/categoriesService.js"></script>
     <script src = "app/js/services/sessionService.js"></script>
+    <script src = "app/js/services/complaintsService.js"></script>
     <script src = "app/js/users/usersController.js"></script>
     <script src = "app/js/header/headerController.js"></script>
     <script src = "app/js/newQuestion/newQuestionController.js"></script>
@@ -41,6 +42,7 @@
     <script src = "app/js/angucomplete.js"></script>
     <script src = "app/js/admin/adminController.js"></script>
     <script src = "app/js/admin/users/adminUsersController.js"></script>
+    <script src = "app/js/admin/complaints/adminComplaintsController.js"></script>
     <script src = "app/js/admin/questions/adminQuestionsController.js"></script>
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   </body>
