Users Admin Page

--- a/public/app/js/admin/users/users_template.html
+++ b/public/app/js/admin/users/users_template.html
@@ -1,1 +1,5 @@
-{{users}}
+ <div ng-repeat = "user in users">
+   <input ng-model = "user.display_name">
+   <input ng-model = "user.role">
+   <input ng-model = "user.email">
+ </div>
