--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
       <div class="container">
         <h1>Elo Everything</h1>
         <ul>
-          <li role = "presentation" ng-click = "goto('/newQuestion/')">New Question</li>
-          <li role = "presentation" ng-click = "goto('/quiz/')">Quiz</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/quiz/')">Quiz</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/profile/')">Profile</li>
+          <li ng-show = 'currentUser' role = "presentation" ng-click = "goto('/newQuestion/')">Add Question</li>
           <li ng-hide = 'currentUser' role = "presentation" ng-click = "goto('/login/')">Login</li>
           <li ng-show = 'currentUser' role = "presentation" ng-click = "logout()">Logout</li>
         </ul>
@@ -29,12 +30,14 @@
     <script src = "app/app.js"></script>
     <script src = "app/js/quiz/quizController.js"></script>
     <script src = "app/js/auth/authController.js"></script>
+    <script src = "app/js/profile/profileController.js"></script>
     <script src = "app/js/services/questionsService.js"></script>
     <script src = "app/js/services/usersService.js"></script>
     <script src = "app/js/services/authService.js"></script>
     <script src = "app/js/services/categoriesService.js"></script>
     <script src = "app/js/services/sessionService.js"></script>
     <script src = "app/js/services/complaintsService.js"></script>
+    <script src = "app/js/directives/score/scoreDisplay.js"></script>
     <script src = "app/js/users/usersController.js"></script>
     <script src = "app/js/header/headerController.js"></script>
     <script src = "app/js/newQuestion/newQuestionController.js"></script>
