Able to edit user info on Profile Page

--- a/public/app/js/quiz/quiz_template.html
+++ b/public/app/js/quiz/quiz_template.html
@@ -14,7 +14,7 @@
         <div class = 'col-xs-12' ng-show = "user.scores.length">
           <strong>Your Categories:</strong>
           <span ng-repeat ="category in user.scores|orderBy:'-score' | limitTo:limit" ng-click="loadQuestion(category._category)"><score-display score = "category"></score-display></span>
-          <i><small><span ng-show="limit<=user.scores.length" ng-click = "limit=limit+5">More</span><span ng-show="limit>5" ng-click = "limit=limit - 5">Less</span></small></i>
+          <i><small><span ng-show="limit<user.scores.length" ng-click = "limit=limit+5">More</span><span ng-show="limit>5" ng-click = "limit=limit - 5">Less</span></small></i>
         </div>
         <div class = 'col-xs-12' ng-hide = "user.scores.length">
           <span class = "h3">Select from populare categories to start increasing your elo score.</span>
