--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -13,7 +13,43 @@
     </span>
     </div>
     <div class = "col-xs-3 red">
-
+      <div class = "user-profile row">
+        <div class = " col-xs-8 col-md-4">
+        <img ng-src = "{{user.pictureUrl}}" class = "profile-img-button">
+      </div>
+      <div class = "col-xs-8">
+        Name: <input
+          type = 'text'
+          ng-disabled = '!editing'
+          ng-model = "user.display_name"
+          ng-change = "updating = true"
+          ng-dblclick = "editing=true">
+        <span
+          class="glyphicon glyphicon-pencil"
+          aria-label="Edit"
+          ng-hide = "editing"
+          ng-click = "editing = true">
+        </span>
+      </br>
+        Email: <input
+          type = 'email'
+          ng-disabled = '!editing'
+          ng-model = "user.email"
+          ng-change = "updating = true"
+          ng-dblclick = "editing =true">
+        <span
+          class="glyphicon glyphicon-pencil"
+          aria-label="Edit"
+          ng-hide = "editing"
+          ng-click = "editing = true">
+        </span>
+      </br>
+      <button
+        ng-click = "updateUser()"
+        ng-show = "updating">
+        Update
+      </button>
+      </div>
     </div>
   </div>
 </div>
