Adding code to make Tags seperate from Categories.

--- a/public/app/js/admin/admin_template.html
+++ b/public/app/js/admin/admin_template.html
@@ -9,4 +9,7 @@ Admin Pages
   <li ng-click = "goto('admin/complaints')">
     View Flagged Questions
   </li>
+  <li ng-click = "goto('admin/categories')">
+    Manage Categories
+  </li>
 </ul>
