--- a/public/app/js/profile/profile_template.html
+++ b/public/app/js/profile/profile_template.html
@@ -7,14 +7,28 @@
 
   </div>
   <div class = "row">
-    <div class = "col-xs-9">
-    <span ng-repeat = "score in user.scores|orderBy:'-score'">
-      <score-display score = "score"> </score-display>
-    </span>
+    <div class = "col-xs-6 col-sm-8">
+      <div class = "max-scroll-box">
+        <span ng-repeat = "score in user.scores|orderBy:'-score'">
+          <score-display score = "score" ng-click = "setCurrentCategory(score)"> </score-display>
+        </span>
+      </div>
+    <div class = "row" ng-show = 'currentCategory'>
+      <div class = "col-xs-12 h3">{{currentCategory._category.name.toUpperCase()}}</div>
+         <div class = "col-xs-12">
+           Correct: {{currentCategory.correct}}/{{currentCategory.answered}} {{currentCategory.correct*100/currentCategory.answered |number:1}}%
+         </div>
+         <div class = "col-xs-12">
+           Wrong: {{currentCategory.wrong}}/{{currentCategory.answered}} {{currentCategory.wrong*100/currentCategory.answered |number:1}}%
+         </div>
+         <div class = "col-xs-12">
+           Passed: {{currentCategory.passed}}/{{currentCategory.answered}} {{currentCategory.passed*100/currentCategory.answered |number:1}}%
+         </div>
     </div>
-    <div class = "col-xs-3 red">
+    </div>
+    <div class = "col-xs-6 red col-sm-4">
       <div class = "user-profile row">
-        <div class = " col-xs-8 col-md-4">
+        <div class = " col-xs-8 col-sm-4">
         <img ng-src = "{{user.pictureUrl}}" class = "profile-img-button">
       </div>
       <div class = "col-xs-8">
