Add title to project page

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html ng-app = "eloEverything">
   <head>
-    <title></title>
+    <title>ELO Everything</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/mainStyle.css">
     <link rel="stylesheet" href="/styles/angucomplete.css">
