--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html ng-app = "eloEverything">
   <head>
     <title>ELO Everything</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/mainStyle.css">
     <link rel="stylesheet" href="/styles/angucomplete.css">
