--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <script src = "app/js/quiz/quizController.js"></script>
     <script src = "app/js/auth/authController.js"></script>
     <script src = "app/js/profile/profileController.js"></script>
+    <script src = "app/js/rankings/rankingsController.js"></script>
     <script src = "app/js/services/questionsService.js"></script>
     <script src = "app/js/services/usersService.js"></script>
     <script src = "app/js/services/authService.js"></script>
