--- a/public/app/js/rankings/rankings_template.html
+++ b/public/app/js/rankings/rankings_template.html
@@ -8,7 +8,7 @@ This be rankings template.
 </div>
 <div>
   <div ng-repeat = "rank in rankings">
-    {{rank.display_name}}:{{rank.scores.score|}}
+    {{rank.display_name}}:{{rank.scores.score}}
   </div>
-
+{{user}}
 </div>
