Format rankings to not show ELO decimals.

--- a/public/app/js/rankings/rankings_template.html
+++ b/public/app/js/rankings/rankings_template.html
@@ -8,6 +8,6 @@ This be rankings template.
 </div>
 <div>
   <div ng-repeat = "rank in rankings">
-    {{rank.display_name}}:{{rank.scores.score}}
+    {{rank.display_name}}:{{rank.scores.score | number:0}}
   </div>
 </div>
